fixed question mark not showing

--- a/wordpress/wp-content/themes/jade-for-wordpress/style.css
+++ b/wordpress/wp-content/themes/jade-for-wordpress/style.css
@@ -171,6 +171,7 @@ list-style-type:none;
                 position: absolute;
                 right: 10px;
                 top: 25px;
+                background: black;
             }
 
 }
@@ -211,6 +212,7 @@ list-style-type:none;
                 position: fixed;
                 right: 10px;
                 top: 25px;
+                background: black;
             }
 }
 
